<resources>
    <string name="app_name">TeamConnect</string>
    <string name="enter_employee_name">Enter Employee Name</string>
    <string name="role">Role</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="save_n_employee">SAVE \n EMPLOYEE</string>
    <string name="delete_n_employee">DELETE \n EMPLOYEE</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="import_data">Import Data</string>
    <string name="export_data">Export Data</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_n_click_here_to_register">not registered? \n click here to register</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_registered_n_click_here_to_login">already registered?\nclick here to login</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="company_chat">Company Chat</string>
    <string name="enter_message">Enter Message</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_employees_to_show_n_please_enter_an_employee_by_clicking_on_the_n_bottom_right_button">No employees to show. \n Please enter an employee \n by clicking on the bottom right button.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">Address</string>
    <string name="address_data">Postmaster, Post Office CHURCH ROAD (SUB OFFICE), RANCHI, JHARKHAND (JH), India (IN), Pin Code:- 834001</string>
    <string name="phone">Phone</string>
    <string name="phone_data">+ 91 987 654 3210</string>
    <string name="website">Website</string>
    <string name="website_address">https://www.google.com</string>
    <string name="about_us">About Us</string>
    <string name="about_desc">Google generates most of its revenues from advertising. This includes sales of apps, purchases made in-app, digital content products on Google and YouTube, Android and licensing and service fees, including fees received for Google Cloud offerings. Forty-six percent of this profit was from clicks (cost per clicks), amounting to US$109,652 million in 2017. This includes three principal methods, namely AdMob, AdSense (such as AdSense for Content, AdSense for Search, etc.) and DoubleClick AdExchange.[127] In addition to its own algorithms for understanding search requests, Google uses technology its acquisition of DoubleClick, to project user interest and target advertising to the search context and the user history.[128][129] In 2007, Google launched \"AdSense for Mobile\", taking advantage of the emerging mobile advertising market.[130] Google Analytics allows website owners to track where and how people use their website, for example by examining click rates for all the links on a page.[131] Google advertisements can be placed on third-party websites in a two-part program. Google Ads allows advertisers to display their advertisements in the Google content network, through a cost-per-click scheme.[132] The sister service, Google AdSense, allows website owners to display these advertisements on their website and earn money every time ads are clicked.[133] One of the criticisms of this program is the possibility of click fraud, which occurs when a person or automated script clicks on advertisements without being interested in the product, causing the advertiser to pay money to Google unduly. Industry reports in 2006 claimed that approximately 14 to 20 percent of clicks were fraudulent or invalid.[134] Google Search Console (rebranded from Google Webmaster Tools in May 2015) allows webmasters to check the sitemap, crawl rate, and for security issues of their websites, as well as optimize their website\'s visibility. Google generates most of its revenues from advertising. This includes sales of apps, purchases made in-app, digital content products on Google and YouTube, Android and licensing and service fees, including fees received for Google Cloud offerings. Forty-six percent of this profit was from clicks (cost per clicks), amounting to US$109,652 million in 2017. This includes three principal methods, namely AdMob, AdSense (such as AdSense for Content, AdSense for Search, etc.) and DoubleClick AdExchange.[127] In addition to its own algorithms for understanding search requests, Google uses technology its acquisition of DoubleClick, to project user interest and target advertising to the search context and the user history.[128][129] In 2007, Google launched \"AdSense for Mobile\", taking advantage of the emerging mobile advertising market.[130] Google Analytics allows website owners to track where and how people use their website, for example by examining click rates for all the links on a page.[131] Google advertisements can be placed on third-party websites in a two-part program. Google Ads allows advertisers to display their advertisements in the Google content network, through a cost-per-click scheme.[132] The sister service, Google AdSense, allows website owners to display these advertisements on their website and earn money every time ads are clicked.[133] One of the criticisms of this program is the possibility of click fraud, which occurs when a person or automated script clicks on advertisements without being interested in the product, causing the advertiser to pay money to Google unduly. Industry reports in 2006 claimed that approximately 14 to 20 percent of clicks were fraudulent or invalid.[134] Google Search Console (rebranded from Google Webmaster Tools in May 2015) allows webmasters to check the sitemap, crawl rate, and for security issues of their websites, as well as optimize their website\'s visibility.Google Workspace (formerly G Suite until October 2020[166]) is a monthly subscription offering for organizations and businesses to get access to a collection of Google\'s services, including Gmail, Google Drive and Google Docs, Google Sheets and Google Slides, with additional administrative tools, unique domain names, and 24/7 support.[167] On September 24, 2012,[168] Google launched Google for Entrepreneurs, a largely not-for-profit business incubator providing startups with co-working spaces known as Campuses, with assistance to startup founders that may include workshops, conferences, and mentorships.[169] Presently, there are seven Campus locations: Berlin, London, Madrid, Seoul, São Paulo, Tel Aviv, and Warsaw. On March 15, 2016, Google announced the introduction of Google Analytics 360 Suite, \"a set of integrated data and marketing analytics products, designed specifically for the needs of enterprise-class marketers\" which can be integrated with BigQuery on the Google Cloud Platform. Among other things, the suite is designed to help \"enterprise class marketers\" \"see the complete customer journey\", generate \"useful insights\", and \"deliver engaging experiences to the right people\".[170] Jack Marshall of The Wall Street Journal wrote that the suite competes with existing marketing cloud offerings by companies including Adobe, Oracle, Salesforce, and IBM.</string>
    <string name="title_activity_temp">Temp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>