<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/action">
        <item
            android:id="@+id/menu_import_data"
            android:title="@string/import_data" />
        <item
            android:id="@+id/menu_export_data"
            android:title="@string/export_data" />
    </group>
    <group android:id="@+id/auth">
        <item
            android:id="@+id/menu_chat"
            android:title="@string/company_chat" />
        <item
            android:id="@+id/menu_sign_out"
            android:title="@string/menu_sign_out" />
    </group>
    <group android:id="@+id/about">
        <item
            android:id="@+id/menu_about_us"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/about_us" />

        <item
            android:id="@+id/menu_contact_us"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/contact_us" />
    </group>


</menu>