<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <TextView
        android:id="@+id/contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/contact_us"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/address"
        android:textColor="#B0000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_title" />

    <TextView
        android:id="@+id/contact_address"
        android:layout_width="326dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:text="@string/address_data"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/contact_address_label"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact_address_label"
        app:layout_constraintTop_toBottomOf="@+id/contact_address_label" />

    <TextView
        android:id="@+id/contact_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/phone"
        android:textColor="#B0000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/contact_address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact_address"
        app:layout_constraintTop_toBottomOf="@+id/contact_address" />

    <TextView
        android:id="@+id/contact_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_data"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/contact_phone_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/contact_phone_label"
        app:layout_constraintTop_toTopOf="@+id/contact_phone_label" />

    <TextView
        android:id="@+id/contact_website_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/website"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/contact_phone_label"
        app:layout_constraintStart_toStartOf="@+id/contact_phone_label"
        app:layout_constraintTop_toBottomOf="@+id/contact_phone_label" />

    <TextView
        android:id="@+id/contact_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center"
        android:linksClickable="true"
        android:minHeight="48dp"
        android:text="@string/website_address"
        android:textColorLink="#2937FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/contact_website_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contact_website_label"
        app:layout_constraintTop_toTopOf="@+id/contact_website_label" />
</androidx.constraintlayout.widget.ConstraintLayout>