<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/employee_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/employee_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_employee_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/employee_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/employee_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/employee_name"
        app:layout_constraintStart_toEndOf="@+id/employeeRole_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/employeeRole_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/role"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/employee_name"
        app:layout_constraintTop_toBottomOf="@+id/employee_name" />

    <Spinner
        android:id="@+id/employee_age"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/employee_role"
        app:layout_constraintStart_toStartOf="@+id/employee_role"
        app:layout_constraintTop_toBottomOf="@+id/employee_role"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/employeeAge_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="4dp"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="@+id/employeeRole_label"
        app:layout_constraintTop_toBottomOf="@+id/employeeRole_label" />

    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:checkedButton="@id/gender_other"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:splitMotionEvents="false"
        app:layout_constraintEnd_toEndOf="@+id/employee_age"
        app:layout_constraintStart_toEndOf="@+id/genderGroup_label"
        app:layout_constraintTop_toBottomOf="@+id/employee_age">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="10dp"
            android:text="@string/male"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="10dp"
            android:text="@string/female"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/gender_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/other" />
    </RadioGroup>

    <TextView
        android:id="@+id/genderGroup_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toStartOf="@+id/employeeAge_label"
        app:layout_constraintTop_toTopOf="@+id/gender_group" />

    <Button
        android:id="@+id/save_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_n_employee"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_employee"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_group"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/delete_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_n_employee"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/save_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_employee" />

    <ImageView
        android:id="@+id/photo_from_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintStart_toStartOf="@+id/employee_photo"
        app:layout_constraintTop_toBottomOf="@+id/employee_photo" />

    <ImageView
        android:id="@+id/photo_from_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_image_search_24"
        app:layout_constraintEnd_toEndOf="@+id/photo_from_camera"
        app:layout_constraintStart_toStartOf="@+id/photo_from_camera"
        app:layout_constraintTop_toBottomOf="@+id/photo_from_camera" />

    <EditText
        android:id="@+id/employee_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/save_employee"
        app:layout_constraintEnd_toEndOf="@+id/gender_group"
        app:layout_constraintStart_toStartOf="@+id/gender_group"
        app:layout_constraintTop_toBottomOf="@+id/gender_group"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/employee_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="@+id/employee_phone"
        app:layout_constraintEnd_toStartOf="@+id/employee_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/employee_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>

