<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="#000000"
            android:backgroundTint="#8C9B6CDE"
            app:cardCornerRadius="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_baseline_people_alt_24" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/registerImageView"
            android:layout_width="108dp"
            android:layout_height="126dp"
            android:layout_marginTop="40dp"
            android:background="#FF6200EE"
            android:src="@drawable/ic_baseline_people_alt_24"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_user_email_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_user_password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/register_user_email_container"
            app:layout_constraintStart_toStartOf="@+id/register_user_email_container"
            app:layout_constraintTop_toBottomOf="@+id/register_user_email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/register_user_password_container"
            app:layout_constraintStart_toStartOf="@+id/register_user_password_container"
            app:layout_constraintTop_toBottomOf="@+id/register_user_password_container" />

        <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/register_user_email_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerImageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/already_registered_n_click_here_to_login"
            android:textColor="#FF6200EE"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>