<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".login.LoginFragment"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="#000000"
            android:backgroundTint="#8C9B6CDE"
            app:cardCornerRadius="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_people_alt_24" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="108dp"
            android:visibility="invisible"
            android:layout_height="126dp"
            android:layout_marginTop="40dp"
            android:background="#FF6200EE"
            android:src="@drawable/ic_baseline_people_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user_email_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress|textEmailAddress"
                app:textInputLayoutFocusedRectEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user_password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/login_user_email_container"
            app:layout_constraintStart_toStartOf="@+id/login_user_email_container"
            app:layout_constraintTop_toBottomOf="@+id/login_user_email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/login_user_password_container"
            app:layout_constraintStart_toStartOf="@+id/login_user_password_container"
            app:layout_constraintTop_toBottomOf="@+id/login_user_password_container" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/login_user_email_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:linksClickable="false"
            android:text="@string/not_registered_n_click_here_to_register"
            android:textColor="#FF6200EE"
            app:backgroundTint="#FFFF"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>